--- a/practica5/index.html
+++ b/practica5/index.html
@@ -52,7 +52,7 @@
 <body>
 	<div class="container">
 	<div class="titol"><h1>RYZER</h1><br></div>
-	<div class="logo"><a href="practica5.html"> <img src="https://cdn.worldvectorlogo.com/logos/razer.svg" width=170px></a></div>
+	<div class="logo"><a href="index.html"> <img src="https://cdn.worldvectorlogo.com/logos/razer.svg" width=170px></a></div>
 	<div class="apartats"> <h2>
 		<a href="ultimasetmana.html"> ÚLTIMA SETMANA<br></a>
 		<a href="rebaixes.html">REBAIXES<br></a>
